Fix flickering caused by reflow after image load
Since we have a responsive layout, the layout is recalculated after the
images load, causing an undesirable flicker as the layout is adjusted to
accommodate the height of the images.

This can be fixed by using a wrapper container to reserve space for the
image to load into.

https://stackoverflow.com/questions/45869454/responsive-images-without-layout-reflow-when-they-load

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -43,7 +43,6 @@ body {
   grid-column: 1 / 13;
   margin-top: 2em;
   margin-bottom: 3em;
-  //background-color: red;
   h1 {
     font-weight: 900;
     font-size: xxx-large;
@@ -56,6 +55,28 @@ body {
 
 #search-container {
   overflow-x: visible;
+}
+
+.image-container {
+    width: 100%;
+    position: relative;
+    height: 0;
+    overflow: hidden;
+}
+
+.image-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.ratio-16-9 {
+  padding-bottom: 56.25%; // 9/16*100
+}
+
+.ratio-1-1 {
+  padding-bottom: 100%
 }
 
 .search-icon {
